Merge branch 'develop' into phone_ui_compose
* develop:
  Release patch version
  Update third party licenses generation script
  Remove useless variable declaration
  Generate third party libraries list and embed it in every release aar
  Enable image res optimization as images are no longer compressed during add phase
  Update module version to last released version
  Update catalogs version to v2023.07.00 to update picasso dependency to v2.8
  Add notification usage permission in manifest for demo app build with api 33
  Update version catalogs usage
  Update version catalog usage
  Update version catalog usage
  Fix whiteboard integration in demo app for api 33
  Apply stub version catalog

# Conflicts:
#	android.gradle
#	app/build.gradle
#	app/src/main/java/com/kaleyra/demo_collaboration_suite_ui/WhiteboardDialog.kt
#	build.gradle
#	collaboration-suite-core-ui/build.gradle
#	collaboration-suite-glass-ui/build.gradle
#	collaboration-suite-phone-ui/build.gradle
#	gradle/wrapper/gradle-wrapper.properties
#	settings.gradle
#	versions.gradle