@@ -1,5 +1,7 @@
+import com.github.jk1.license.render.JsonReportRenderer
+
 /*
- * Copyright 2022 Kaleyra @ https://www.kaleyra.com
+ * Copyright 2023 Kaleyra @ https://www.kaleyra.com
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,72 +15,101 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'maven-publish'
-    id 'org.jetbrains.dokka' version("1.6.21")
+    alias(catalog.plugins.dokka)
+    alias(catalog.plugins.licenseReport)
 }
 
 apply from: '../versions.gradle'
 apply from: '../android.gradle'
+apply from: '../licenses.gradle'
 apply from: '../publish.gradle'
 apply from: '../moveIcons.gradle'
 
 dependencies {
-    api fileTree(include: ['*.jar'], dir: 'libs')
-    coreLibraryDesugaring androidX.desugar
+
+    /*** Platform ***/
+    implementation catalog.kotlinReflect
+    implementation catalog.appcompat
+    implementation catalog.androidxCoreKtx
+    implementation catalog.androidxFragment
+    implementation catalog.androidxActivity
+    implementation catalog.androidxLifecycleViewModel
+    implementation catalog.material
+    implementation catalog.androidxVectorDrawable
+    implementation catalog.androidxVectorDrawableAnimated
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    coreLibraryDesugaring catalog.desugar
 
     /*** Testing ***/
-    testImplementation test.jUnit
-    testImplementation test.mockk
-    testImplementation test.robolectric
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
-    testImplementation 'io.mockk:mockk:1.13.3'
     //    testImplementation kaleyra.collaboration
     testImplementation project(":collaboration-suite")
+    testImplementation catalog.roboelectric
+    testImplementation catalog.junit
+    testImplementation catalog.mockk
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
 
-    androidTestImplementation test.runner
-    androidTestImplementation test.espresso
+    androidTestImplementation catalog.androidxTestRunner
+    androidTestImplementation catalog.androidxTestEspressoCore
     androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.2.1")
     androidTestImplementation "io.mockk:mockk-android:1.13.3"
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
 
-    /*** Platform ***/
-    implementation jetbrains.reflect
-    implementation androidX.appCompat
-    implementation ktxExtensions.core
-    implementation ktxExtensions.fragment
-    implementation ktxExtensions.activity
-    implementation ktxExtensions.lifecycleViewModel
-    implementation google.material
-    implementation androidX.vectorDrawable
-    implementation androidX.vectorDrawableAnimated
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
-
-    compileOnly 'io.github.imablanco:zoomy:1.0.0'
+    debugImplementation("androidx.compose.ui:ui-tooling:1.2.1")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:1.2.1")
 
     /*** UI ***/
-    api picasso.picasso
-    api androidX.constraintLayout
-    api fastAdapter.fastAdapter
-    api fastAdapter.diff
-
-    implementation androidX.recyclerView
-    api google.flexbox
+    api catalog.squareupPicasso
+    api catalog.androidxConstraintLayout
+    api catalog.fastadapter
+    api catalog.fastadapterExtensionsDiff
+    implementation catalog.androidxRecyclerview
+    api catalog.flexbox
+    compileOnly catalog.zoomy
 
     implementation("io.coil-kt:coil-compose:2.1.0")
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.25.1"
 
-    debugImplementation("androidx.compose.ui:ui-tooling:1.2.1")
-    debugImplementation("androidx.compose.ui:ui-test-manifest:1.2.1")
+    api project(":collaboration-suite-core-ui")
 
     /** Kaleyra **/
-//    compileOnly kaleyra.collaboration
-//    compileOnly kaleyra.collaboration_extension_audio
-    api project(':collaboration-suite-core-ui')
+//    compileOnly kaleyraCatalog.kaleyraCollaborationSuite
+//    compileOnly kaleyraCatalog.kaleyraCollaborationSuiteExtensionAudio
     api project(":collaboration-suite")
     api project(":collaboration-suite-extension-audio")
+}
+
+licenseReport {
+    // Set output directory for the report data.
+    // Defaults to ${project.buildDir}/reports/dependency-license.
+    outputDir = "$projectDir/build/licenses"
+
+    // Select projects to examine for dependencies.
+    // Defaults to current project and all its subprojects
+    projects = [project] + project.subprojects
+
+    // Adjust the configurations to fetch dependencies. Default is 'runtimeClasspath'
+    // For Android projects use 'releaseRuntimeClasspath' or 'yourFlavorNameReleaseRuntimeClasspath'
+    // Use 'ALL' to dynamically resolve all configurations:
+    // configurations = ALL
+    configurations = ['releaseRuntimeClasspath']
+
+    // Set custom report renderer, implementing ReportRenderer.
+    // Yes, you can write your own to support any format necessary.
+    renderers = [new JsonReportRenderer('licenses.json', false)]
+}
+
+// workaround for mockk spyk(proxy)
+// https://mockk.io/doc/md/jdk16-access-exceptions.html
+tasks.withType(Test) {
+    jvmArgs(
+            "--add-opens", "java.base/java.time=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    )
 }
